--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
     "element-plus": "^2.7.7",
     "less": "^4.2.0",
     "vue": "^3.4.37",
-    "vue-router": "^4.4.4"
+    "vue-router": "^4.4.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+   "rules": {
+     "vue/no-multiple-template-root": "off" 
+    }
   }
 }
