feat: 登陆注册的接口联调

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
     "element-plus": "^2.7.7",
     "less": "^4.2.0",
     "vue": "^3.4.37",
@@ -27,8 +28,8 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-   "rules": {
-     "vue/no-multiple-template-root": "off" 
+    "rules": {
+      "vue/no-multiple-template-root": "off"
     }
   }
 }
