--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
-    "element-plus": "^2.7.7",
+    "element-plus": "^2.3.1",
     "less": "^4.2.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.4",
@@ -24,7 +24,8 @@
     "@vitejs/plugin-vue": "^5.1.2",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-remove-console": "^2.2.0"
   },
   "eslintConfig": {
     "extends": [
