--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "sharp": "^0.33.5",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-remove-console": "^2.2.0"
   },
   "eslintConfig": {
